--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/main/styles.css"/>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"> 
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -22,23 +23,35 @@
                         <h5>Select Your Preferred currency</h5>
                         <p id="p"></p>
                     </div>
-                    <div class="row">
-                            <p>From</p>    
-                            <select name="firstCurrency_Select" id="firstCurrency_Select"></select>
+                    <div class="form-group">
+                            <div class="col-md-offset-2">
+                                <label>From</label>    
+                                <select class="form-control" name="firstCurrency_Select" id="firstCurrency_Select"></select>
+                            </div>
                     </div>
-                    <div class="row">
-                            <p>To</p>    
-                            <select name="secondCurrency_Select" id="secondCurrency_Select"></select>
+                    <div class="form-group">
+                            <div class="col-md-offset-2">
+                                    <label>To</label>    
+                                    <select class="form-control" name="secondCurrency_Select" id="secondCurrency_Select"></select>
+                            </div>
                     </div>
-                    <div class="row">
-                            <p>Amount</p>    
-                            <input placeholder="100" id="amount"/>
+                    <div class="form-group">
+                        <div class="col-md-offset-2">
+                                <label>Amount</label>    
+                                <input class="form-control" placeholder="100" id="amount"/>
+                        </div>
                     </div>
-                    <div class="row">
-                        <button class="btn-default" id="convert">Convert</button>
+                    <div class="form-group">
+                            <div class="col-md-offset-2">
+                                <button class="btn btn-primary form-control" id="convert">Convert</button>
+                            </div>
                     </div>
+                    
+                    <div class="col-md-offset-2">
+                            <h1>Result</h2>
+                            <h4 id="result"></h4>
 
-                    <div id="result"></div>
+                    </div>
                 </div>
                 <div class="col-md-2 col-lg-2"></div>
 
